--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,7 @@
 <LinearLayout android:layout_height="wrap_content" android:id="@+id/SearchLayout" android:layout_width="fill_parent">
 
 
-<AutoCompleteTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/SearchEdit"></AutoCompleteTextView>
+<AutoCompleteTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/SearchEdit" android:text="@string/search_text" android:textColor="#999999"></AutoCompleteTextView>
 <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ClearButton"></ImageButton>
 </LinearLayout>
 
