finished coding RepeatSchedule

--- a/res/layout/trans_row_wide.xml
+++ b/res/layout/trans_row_wide.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" android:orientation="horizontal">
+    android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/TransactionRowLandscape">
     
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/IdText"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"></CheckBox>
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2008-10-01" android:layout_weight="2" android:id="@+id/DateText"></TextView>
