--- a/res/layout/trans_row_narrow.xml
+++ b/res/layout/trans_row_narrow.xml
@@ -3,10 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="top" android:gravity="top" android:id="@+id/TransactionRowPortrait">
     
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/IdText"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"></CheckBox>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/IdText"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"></CheckBox><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2008-10-01" android:layout_weight="2" android:id="@+id/DateText" android:visibility="gone"></TextView>
 
 <TextView android:layout_width="wrap_content" android:layout_weight="10" android:id="@+id/PartyText" android:ellipsize="end" android:singleLine="false" android:gravity="top|left" android:layout_height="fill_parent" android:text="Wilmington Trust Company" android:lines="2" android:layout_gravity="left|center_vertical"></TextView>
-<TextView android:layout_width="wrap_content" android:text="215.00" android:gravity="right" android:id="@+id/AmountText" android:layout_weight="4" android:layout_height="fill_parent" android:paddingRight="7px"></TextView>
+<TextView android:layout_width="wrap_content" android:text="215.00" android:gravity="right" android:id="@+id/AmountText" android:layout_weight="4" android:layout_height="fill_parent" android:paddingRight="7px"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/BalanceText" android:text="1000.00" android:gravity="right" android:visibility="gone"></TextView>
 
 
 </TableRow>
