mostly finished the account activities (still need to launch last-used account's transaction activity) started working on transaction activity fixed errors with sql cursors and limits

--- a/res/layout/accounts.xml
+++ b/res/layout/accounts.xml
@@ -9,7 +9,7 @@
 
 
 
-<ListView android:layout_height="wrap_content" android:id="@android:id/list" android:layout_width="fill_parent" android:layout_weight="100"></ListView>
+<ListView android:layout_height="wrap_content" android:id="@android:id/list" android:layout_width="fill_parent" android:layout_weight="100" android:paddingRight="5px"></ListView>
 
 
 
