--- a/res/layout/trans.xml
+++ b/res/layout/trans.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
+    android:paddingRight="5px">
 <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal"><RadioGroup android:id="@+id/RadioGroup01" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent" android:checkedButton="@+id/withdrawRadio"><RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Deposit" android:layout_weight="1" android:id="@+id/depositRadio" android:checked="false"></RadioButton><RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Withdraw" android:layout_weight="1" android:id="@+id/withdrawRadio" android:checked="true"></RadioButton><RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Check" android:layout_weight="1" android:id="@+id/checkRadio"></RadioButton>
 </RadioGroup>
 </LinearLayout>
