--- a/res/layout/trans_row_narrow.xml
+++ b/res/layout/trans_row_narrow.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="top" android:gravity="top" android:id="@+id/TransactionRowPortrait">
+    android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="top" android:gravity="top" android:id="@+id/TransactionRowPortrait" android:clickable="true">
     
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/IdText"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"></CheckBox><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_gravity="left|center_vertical" android:layout_weight="10" android:orientation="vertical"><TextView android:id="@+id/PartyText" android:ellipsize="end" android:gravity="top|left" android:text="Wilmington Trust Company" android:layout_gravity="left|center_vertical" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="18px" android:lines="1" android:maxLines="1"></TextView><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:layout_height="wrap_content" android:text="2008-10-01" android:id="@+id/DateText" android:layout_gravity="left|center_vertical" android:layout_width="wrap_content" android:layout_weight="2"></TextView><TextView android:layout_width="wrap_content" android:text="215.00" android:gravity="right" android:id="@+id/AmountText" android:layout_height="fill_parent" android:paddingRight="7px" android:singleLine="false" android:maxLines="1" android:lines="1" android:layout_weight="1"></TextView></LinearLayout>
-</LinearLayout>
 
 
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/BalanceText" android:text="1000.00" android:gravity="right" android:visibility="gone"></TextView>
 
 
 
-</TableRow>
+</LinearLayout>
+</LinearLayout>
