--- a/res/layout/trans_row_wide.xml
+++ b/res/layout/trans_row_wide.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/TransactionRowLandscape" android:clickable="true">
-    
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/IdText"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/PostedCheckBox" android:layout_gravity="top|left" android:layout_marginTop="-5px" android:layout_marginBottom="-10px"></CheckBox>
-<TextView android:layout_width="wrap_content" android:text="2008-10-01" android:id="@+id/DateText" android:ellipsize="end" android:layout_height="wrap_content" android:layout_gravity="left|center_vertical" android:paddingRight="0px" android:minWidth="100px" android:maxWidth="100px"></TextView>
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Wilmington Trust Company" android:id="@+id/PartyText" android:gravity="left" android:layout_gravity="left|center_vertical" android:maxLines="1" android:lines="1" android:ellipsize="end" android:maxWidth="250px"></TextView>
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="215.00" android:gravity="right" android:id="@+id/AmountText" android:paddingRight="5px" android:layout_gravity="right|center_vertical" android:layout_weight="1"></TextView>
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/BalanceText" android:text="1000.00" android:gravity="right" android:visibility="gone"></TextView>
-
+    android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/LinearLayout01">
+<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/PostedCheckBox" android:layout_marginTop="-5px" android:layout_marginBottom="-10px" android:focusable="false" android:focusableInTouchMode="false"></CheckBox>
+<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1">
+<TextView android:layout_width="wrap_content" android:text="2008-10-01" android:id="@+id/DateText" android:ellipsize="end" android:layout_gravity="left|center_vertical" android:paddingRight="0px" android:minWidth="100px" android:maxWidth="100px" android:layout_height="fill_parent"></TextView>
+<TextView android:layout_width="wrap_content" android:text="Wilmington Trust Company" android:id="@+id/PartyText" android:gravity="left" android:layout_gravity="left|center_vertical" android:maxLines="1" android:lines="1" android:ellipsize="end" android:maxWidth="250px" android:layout_height="fill_parent"></TextView>
+<TextView android:layout_width="wrap_content" android:text="215.00" android:gravity="right" android:id="@+id/AmountText" android:paddingRight="5px" android:layout_gravity="right|center_vertical" android:layout_weight="1" android:layout_height="fill_parent"></TextView>
+</LinearLayout>
 </LinearLayout>
