--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -9,5 +9,10 @@
         <item>Yearly</item>
         <item>Custom...</item>
     </string-array>
+    <string-array name="sort">
+        <item>Date</item>
+        <item>Party</item>
+        <item>Amount</item>
+    </string-array>
 </resources>
   
