--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,7 +9,7 @@
 
 
 
-<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:visibility="gone" android:id="@+id/SearchLayout"><EditText android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/SearchEdit" android:layout_height="fill_parent" android:hint="Search"></EditText>
+<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:visibility="gone" android:id="@+id/SearchLayout"><MultiAutoCompleteTextView android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/SearchEdit" android:layout_height="fill_parent" android:hint="Search"></MultiAutoCompleteTextView>
 <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ClearButton" android:src="@android:drawable/ic_input_delete"></ImageButton>
 </LinearLayout><ListView android:layout_height="wrap_content" android:id="@android:id/list" android:layout_width="fill_parent" android:layout_weight="100" android:paddingRight="5px"></ListView><LinearLayout android:layout_height="wrap_content" android:id="@+id/BalanceLayout" android:layout_width="fill_parent">
 
