--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -19,5 +19,9 @@
         <item>Restore Purged Transactions</item>
         <item>Clear Purged Transactions</item>
     </string-array>
+    <string-array name="repeat_month">
+        <item>Day</item>
+        <item>Date</item>
+    </string-array>
 </resources>
   
